force-app/main/default/objects/Verification_Event__e/Verification_Event__e.object-meta.xml
<CustomObject>
    <label>Verification Event</label>
    <pluralLabel>Verification Events</pluralLabel>
    <description>Platform event for publishing provider verification results</description>
</CustomObject>