force-app/main/default/objects/Verification_Event__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message about the verification event</description>
    <inlineHelpText>Contains information or status message about the verification result</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>