force-app/main/default/objects/Verification_Event__e/fields/Provider_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Application_Id__c</fullName>
    <description>Salesforce ID of the Provider Application record</description>
    <inlineHelpText>The 15 or 18 character ID of the related Provider Application record</inlineHelpText>
    <label>Provider Application Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>