force-app/main/default/objects/Verification_Event__e/fields/Risk_Tier__c.field-meta.xml
<CustomField>
    <fullName>Risk_Tier__c</fullName>
    <description>Risk tier classification from the verification process</description>
    <inlineHelpText>Indicates the risk level assigned during verification</inlineHelpText>
    <label>Risk Tier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>